--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
 
-version = 'forge-1.2.0+1.18.2'
+version = 'forge-1.2.2+1.18.2'
 group = 'me.fengming.vaultpatcher' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'vaultpatcher'
 
@@ -215,6 +215,6 @@ mixin {
     add sourceSets.main, 'mixins.vaultpatcher.refmap.json'
     config 'mixins.vaultpatcher.json'
 
-    debug.export = true
-    debug.verbose = true
+    // debug.export = true
+    // debug.verbose = true
 }
