update icon and README

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,21 +11,22 @@ loaderVersion="[40,)" #mandatory This is typically bumped every Minecraft versio
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="GNU General Public License v3.0"
 # A URL to refer people to when problems occur with this mod
-#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
+issueTrackerURL="https://github.com/3093FengMing/VaultPatcher/issues"
 # A list of mods - how many allowed here is determined by the individual mod loader
+logoFile="icon.png"
 [[mods]] #mandatory
 # The modid of the mod
 modId="vaultpatcher" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.2.2+1.18.2" #mandatory
- # A display name for the mod
+version="1.2.3+1.18.2" #mandatory
+# A display name for the mod
 displayName="Vanilla Hardcoded Bearker" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
+displayURL="https://github.com/3093FengMing/VaultPatcher" #optional
 # A text field displayed in the mod UI
 authors="FengMing, teddyxlandlee" #optional
 # The description text for the mod (multi line!) (#mandatory)
