--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
 
-version = 'forge-1.2.10+1.18.2'
+version = 'forge-1.2.11-asm'
 group = 'me.fengming.vaultpatcher' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'vaultpatcher'
 
@@ -66,7 +66,7 @@ minecraft {
             property 'forge.enabledGameTestNamespaces', 'vaultpatcher'
 
             mods {
-                examplemod {
+                vaultpatcher {
                     source sourceSets.main
                 }
             }
@@ -183,6 +183,7 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 }
 
 // Example configuration to allow publishing using the maven-publish plugin
@@ -208,9 +209,10 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
 
+
 mixin {
-    add sourceSets.main, 'mixins.vaultpatcher.refmap.json'
-    config 'mixins.vaultpatcher.json'
+//    add sourceSets.main, 'mixins.vaultpatcher.refmap.json'
+//    config 'mixins.vaultpatcher.json'
 
     // debug.export = true
     // debug.verbose = true
