--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
 buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7.+'
-        classpath 'org.parchmentmc:librarian:1.+'
+        // classpath 'org.spongepowered:mixingradle:0.7.+'
+        // classpath 'org.parchmentmc:librarian:1.+'
     }
 }
 
 plugins {
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
-    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    // id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
 apply plugin: 'maven-publish'
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
+// apply plugin: 'org.spongepowered.mixin'
+// apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
 
-version = 'forge-1.2.14-asm'
+version = 'forge-1.3.0'
 group = 'me.fengming.vaultpatcher' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'vaultpatcher'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
@@ -40,7 +40,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'parchment', version: '2022.08.07-1.18.2'
+    mappings channel: 'official', version: '1.14.4'
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -150,10 +150,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:23.0.0'
+
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.2-40.1.0'
+    minecraft 'net.minecraftforge:forge:1.14.4-28.2.26'
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
@@ -210,10 +212,10 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 
-mixin {
-//    add sourceSets.main, 'mixins.vaultpatcher.refmap.json'
-//    config 'mixins.vaultpatcher.json'
-
-    // debug.export = true
-    // debug.verbose = true
-}
+//mixin {
+////    add sourceSets.main, 'mixins.vaultpatcher.refmap.json'
+////    config 'mixins.vaultpatcher.json'
+//
+//    // debug.export = true
+//    // debug.verbose = true
+//}
