--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "com.github.Chocohead:Fabric-ASM:${project.fabric_asm_version}"
-    include "com.github.Chocohead:Fabric-ASM:${project.fabric_asm_version}"
+    // include "com.github.Chocohead:Fabric-ASM:${project.fabric_asm_version}"
 
     }
 
@@ -55,7 +55,7 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    archivesBaseName = project.archives_base_name
+    archivesBaseName = project.archives_base_name + "-fabric"
     // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
     // if it is present.
     // If you remove this line, sources will not be generated.
@@ -63,9 +63,9 @@ java {
 }
 
 jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
-    }
+//    from("LICENSE") {
+//        rename { "${it}_${project.archivesBaseName}"}
+//    }
 }
 
 // configure the maven publication
