--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.3.0
 	maven_group = me.fengming
-	archives_base_name = VaultPatcher
+	archives_base_name = vaultpatcher
 
 	fabric_asm_version = v2.3
 
