--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'maven-publish'
 
-version = 'all-1.3.4'
+version = 'all-1.3.4+2'
 group = 'me.fengming.vaultpatcher' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
@@ -41,10 +41,10 @@ repositories {
         url "https://maven.fabricmc.net/"
     }
     maven {
-        url "https://files.minecraftforge.net/maven"
+        url "https://maven.minecraftforge.net/"
     }
     maven {
-        url 'https://jitpack.io'
+        url 'https://jitpack.io/'
     }
 }
 
