--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,7 @@ println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty '
 jar {
     manifest {
         attributes([
-                "FMLCorePlugin": "me.fengming.vaultpatcher_asm.loader.forge.VPCoreModPlugin",
-                "FMLCorePluginContainsFMLMod": false
+                "Tweaker": "me.fengming.vaultpatcher_asm.loader.forge.VPLaunchTweaker"
         ])
     }
 
