--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ repositories {
 
 dependencies {
     compileOnly 'org.jetbrains:annotations:23.0.0'
+    compileOnly project(':stub-lib')
 
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'it.unimi.dsi:fastutil:7.0.10'
