Adapt PlainTextContents$ in post-1.20.3

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 apply plugin: 'maven-publish'
-version = "all-${mod_version}"
+version = project.mod_version
 group = 'me.fengming.vaultpatcher'
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
@@ -29,7 +29,7 @@ jar {
         expand "version": mod_version
     }
 
-    exclude "cpw"
+    archiveAppendix = 'all'
 }
 
 java {
