--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=1.4.7-alpha+3
+mod_version=1.4.7-alpha+4
+mod_description=Let the hard coded strings change into localization strings in some mods.
+mod_license=GPL-3.0
+mod_repo=https://github.com/3093FengMing/VaultPatcher
+mod_homepage=https://modrinth.com/mod/vault-patcher
